--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,9 @@
-.App {
-  text-align: center;
-}
-
 * {
   margin: 0;
   padding: 0;
 }
 
-div.home-container {
+div.flex-container {
   display: flex;
   flex-direction: column;
   align-items: center;
